--- a/site/index.html
+++ b/site/index.html
@@ -55,5 +55,22 @@
         <img src="images/charles-deluvio-7hvuzoyFAgY-unsplash.jpg" width="200" height="300" alt="Dog" title="sadDog" align="middle">
         <p align="center"> <img src="images/charles-deluvio-7hvuzoyFAgY-unsplash.jpg" width="200" height="300" alt="Dog" title="sadDog"></p>
         <p><a href="#TOP">UPUPUP</a></p>
+        <br>
+        <br>
+        <label>
+        intername
+        <input>
+        <br>
+        <button>
+        Save
+        </label>
+        </button>
+        <br>
+        <label>Inter name</label>
+<input>
+<br>
+<label>18?</label>
+<input type="checkbox" />
+<button>Save</button>
     </body>
 </html>
