--- a/site/cuteknit/index.html
+++ b/site/cuteknit/index.html
@@ -3,12 +3,61 @@
 	<head>
 		<title>"Cute Knits" site</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width,initiall-scale=1.0,maximum-scale=1.0, user-scalable=0">
+		<meta name="format-detection" content="telephone=no">
+		<meta name="description" content="...">
+		<meta name="keywords" content="...<=20">
+		<meta name="robots" content="noimageindex, nofollow">
+		<meta name="Author" content="Julia">
+		<meta name="Copyright" content="JuliaL">
+		<meta name="Address" content="Belarus, Minsk">
+		<meta property="og:locale" content="ru_RU">
+		<meta property="og:type" content="site">
+		<meta property="og:title" content="Cuteknit.by">
+		<meta property="og:description" content="Knitting">
+		<meta property="og:image" content="#">
+		<meta property="og:url" content="#">
+		<meta property="og:site_name" content="Cuteknit">
 		<link rel="stylesheet" href="css/style.css" />
 	</head>	
 	<body>
-		<h1>Your pert gonna wear it! X !ti evol annog tep ruoY</h1>
-		<header>	</header>
-		<nav>		</nav>
-		<footer>	</footer>
-	</body>	
+		<div class="about">
+			<div class="about__body">
+				<div class="about__header">
+					<div class="about__title title">CUTEKNIT </div>
+					<div class="about__text">Site about cnitting for animals.</div>
+				</div>
+				<div class="about__row">
+					<div class="about__column">
+						<div class="item-about">
+							<div class="item-about__icon">
+								<img src="img/about/01.png" alt="" />
+							</div>
+							<div class="item-about__title">WEB</div>
+							<div class="item-about__text">We tend to deliver unique and functional design, through innovation and creativity.</div>
+						</div>
+					</div>
+					<div class="about__column">
+						<div class="item-about">
+							<div class="item-about__icon">
+								<img src="img/about/02.png" alt="" />
+							</div>
+							<div class="item-about__title">iOS AND ANDROID</div>
+							<div class="item-about__text">We seek to bring new businesses and customers closer together through valuable insights and proper targeting.</div>
+						</div>
+					</div>
+					<div class="about__column">
+						<div class="item-about">
+							<div class="item-about__icon">
+								<img src="img/about/03.png" alt="" />
+							</div>
+							<div class="item-about__title">MARKETING</div>
+							<div class="item-about__text">We’ll help you establish the right goals and build the right paths. Success depends on setting the right intention.</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
