--- a/site/cuteknit/index.html
+++ b/site/cuteknit/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 	<head>
-		<title>"Cute Knits" site</title>
+		<title>"Cute Knits for Pets"</title>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initiall-scale=1.0,maximum-scale=1.0, user-scalable=0">
@@ -22,42 +22,31 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>	
 	<body>
-		<div class="about">
-			<div class="about__body">
-				<div class="about__header">
-					<div class="about__title title">CUTEKNIT </div>
-					<div class="about__text">Site about cnitting for animals.</div>
-				</div>
-				<div class="about__row">
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/01.png" alt="" />
-							</div>
-							<div class="item-about__title">WEB</div>
-							<div class="item-about__text">We tend to deliver unique and functional design, through innovation and creativity.</div>
-						</div>
-					</div>
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/02.png" alt="" />
-							</div>
-							<div class="item-about__title">iOS AND ANDROID</div>
-							<div class="item-about__text">We seek to bring new businesses and customers closer together through valuable insights and proper targeting.</div>
-						</div>
-					</div>
-					<div class="about__column">
-						<div class="item-about">
-							<div class="item-about__icon">
-								<img src="img/about/03.png" alt="" />
-							</div>
-							<div class="item-about__title">MARKETING</div>
-							<div class="item-about__text">We’ll help you establish the right goals and build the right paths. Success depends on setting the right intention.</div>
-						</div>
-					</div>
-				</div>
-			</div>
+		<header>
+		<h4>Лучший свитерок Для меня!!!</h4vvvv vvvbv      >
+		</header>
+		<h2>Лучший свитерок Для меня!!!</h2>
+		
+		<img src="img/main.jpg" class="mainpicture" alt="">
+		<div class="main"> Я предлагаю вам первый абзац
+		ыва
+		ыва<h1>ssssss</h1><h6>ssssssss</h6> b 
 		</div>
+		<div class="middle"> У меня для вас есть второй абзац
+		авц
+		авц
+		авц
+		авц
+		авц
+		</div>
+		<div class="third"> Вам будет интересно третий абзац 
+		дло
+		дло
+		дло
+		дло
+		дло
+		</div>
+		<footer>
+		</footer>
 	</body>
 </html>
