--- a/site/cuteknit/index.html
+++ b/site/cuteknit/index.html
@@ -25,6 +25,9 @@
 		<header>
 		<h4>Лучший свитерок Для меня!!!</h4vvvv vvvbv      >
 		</header>
+		<div class=:menu">
+		<img src="img/Me.jpg" class="photo" alt ="">
+		</div>
 		<h2>Лучший свитерок Для меня!!!</h2>
 		
 		<img src="img/main.jpg" class="mainpicture" alt="">
@@ -32,7 +35,20 @@
 		ыва
 		ыва<h1>ssssss</h1><h6>ssssssss</h6> b 
 		</div>
-		<div class="middle"> У меня для вас есть второй абзац
+		<div class="middle"> 	У меня для вас есть второй абзац
+		 Некоторые хозяева предпочитают комбинезону курточки или попонки.
+
+<p>Такая одежда может быть не самым удачным выбором для зимы. Курточка почти не закрывает живот и пах вашего питомца, защищая только спину и бока, а ноги вообще остаются открытыми. В результате одни участки тела чрезмерно греются, а другие остаются открытыми. Это может привести к простудам или к проблемам с суставами. На мой взгляд, лучше вообще ничего не надевать, чем надевать полуодежду, когда за окном очень холодно...
+
+Попона — прекрасный вариант для лета или ранней осени, когда еще нет промозглой сырости и холодного ветра. Или когда надо защитить питомца от клещей и репейников.
+
+Одежда для собак — это лучшее средство защиты вашего питомца от неблагоприятных городских условий. Просто помните, что все индивидуально. И если одни животные вполне нормально могут гулять при сильных морозах и не испытывать дискомфорта, то другие их соплеменники (иногда даже той же породы) и в ноль градусов будут трястись как осиновый лист. Поэтому, выбирая одежду для своего питомца, всегда учитывайте породу, возраст и состояние его здоровья.  Некоторые хозяева предпочитают комбинезону курточки или попонки.
+
+Такая одежда может быть не самым удачным выбором для зимы. Курточка почти не закрывает живот и пах вашего питомца, защищая только спину и бока, а ноги вообще остаются открытыми. В результате одни участки тела чрезмерно греются, а другие остаются открытыми. Это может привести к простудам или к проблемам с суставами. На мой взгляд, лучше вообще ничего не надевать, чем надевать полуодежду, когда за окном очень холодно...
+
+Попона — прекрасный вариант для лета или ранней осени, когда еще нет промозглой сырости и холодного ветра. Или когда надо защитить питомца от клещей и репейников.
+
+Одежда для собак — это лучшее средство защиты вашего питомца от неблагоприятных городских условий. Просто помните, что все индивидуально. И если одни животные вполне нормально могут гулять при сильных морозах и не испытывать дискомфорта, то другие их соплеменники (иногда даже той же породы) и в ноль градусов будут трястись как осиновый лист. Поэтому, выбирая одежду для своего питомца, всегда учитывайте породу, возраст и состояние его здоровья. </p>
 		авц
 		авц
 		авц
