--- a/site/cuteknit/index.html
+++ b/site/cuteknit/index.html
@@ -22,47 +22,22 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>	
 	<body>
+		<div class="wrapper">
 		<header>
-		<h4>Лучший свитерок Для меня!!!</h4vvvv vvvbv      >
+		<img src="img/main.png" class="mainpicture" alt="">
 		</header>
-		<div class=:menu">
-		<img src="img/Me.jpg" class="photo" alt ="">
+		<div class="middle">
+		<p>С радостью свяжу для вашего любимца уютную одёжку.</p>
 		</div>
-		<h2>Лучший свитерок Для меня!!!</h2>
-		
-		<img src="img/main.jpg" class="mainpicture" alt="">
-		<div class="main"> Я предлагаю вам первый абзац
-		ыва
-		ыва<h1>ssssss</h1><h6>ssssssss</h6> b 
-		</div>
-		<div class="middle"> 	У меня для вас есть второй абзац
-		 Некоторые хозяева предпочитают комбинезону курточки или попонки.
-
-<p>Такая одежда может быть не самым удачным выбором для зимы. Курточка почти не закрывает живот и пах вашего питомца, защищая только спину и бока, а ноги вообще остаются открытыми. В результате одни участки тела чрезмерно греются, а другие остаются открытыми. Это может привести к простудам или к проблемам с суставами. На мой взгляд, лучше вообще ничего не надевать, чем надевать полуодежду, когда за окном очень холодно...
-
-Попона — прекрасный вариант для лета или ранней осени, когда еще нет промозглой сырости и холодного ветра. Или когда надо защитить питомца от клещей и репейников.
-
-Одежда для собак — это лучшее средство защиты вашего питомца от неблагоприятных городских условий. Просто помните, что все индивидуально. И если одни животные вполне нормально могут гулять при сильных морозах и не испытывать дискомфорта, то другие их соплеменники (иногда даже той же породы) и в ноль градусов будут трястись как осиновый лист. Поэтому, выбирая одежду для своего питомца, всегда учитывайте породу, возраст и состояние его здоровья.  Некоторые хозяева предпочитают комбинезону курточки или попонки.
-
-Такая одежда может быть не самым удачным выбором для зимы. Курточка почти не закрывает живот и пах вашего питомца, защищая только спину и бока, а ноги вообще остаются открытыми. В результате одни участки тела чрезмерно греются, а другие остаются открытыми. Это может привести к простудам или к проблемам с суставами. На мой взгляд, лучше вообще ничего не надевать, чем надевать полуодежду, когда за окном очень холодно...
-
-Попона — прекрасный вариант для лета или ранней осени, когда еще нет промозглой сырости и холодного ветра. Или когда надо защитить питомца от клещей и репейников.
-
-Одежда для собак — это лучшее средство защиты вашего питомца от неблагоприятных городских условий. Просто помните, что все индивидуально. И если одни животные вполне нормально могут гулять при сильных морозах и не испытывать дискомфорта, то другие их соплеменники (иногда даже той же породы) и в ноль градусов будут трястись как осиновый лист. Поэтому, выбирая одежду для своего питомца, всегда учитывайте породу, возраст и состояние его здоровья. </p>
-		авц
-		авц
-		авц
-		авц
-		авц
-		</div>
-		<div class="third"> Вам будет интересно третий абзац 
-		дло
-		дло
-		дло
-		дло
-		дло
-		</div>
+		<img src="img/winter.png" class="last" alt="">
 		<footer>
+		<br>
+		<p>Ручная работа. Уникальные вещи.</p>
+		<br>
+		<p>Контактная информация</p>
+		<p>Обращайтесь с вопросами и предложениями.</p>
+		<br>
 		</footer>
+		</div>
 	</body>
 </html>
